k8s/wt-deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: wt-app 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wt-app
  template:
    metadata:
      labels:
        app: wt-app 
    spec:
      containers:
        - name: wt-app 
          image: vikrantdevops.azurecr.io/weighttracker:latest
          ports:
          - containerPort: 80
          resources:
              requests:
                cpu: 500m
                memory: 256Mi
              limits:
                cpu: "1"
                memory: 512M
