k8s/wt-service.yml
apiVersion: v1
kind: Service
metadata:
    name: wt-app-service
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: wt-app
