k8s/wt-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wt-ingress
  annotations:
     kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  -  http:
      paths:
        - backend:
            service:
              name: wt-app-service
              port:
                number: 80
          path: /
          pathType: Prefix
